hdone/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Active_USPS__c</fullName>
        <description>Indicates whether the address is active, or &quot;in-service&quot; according to the USPS. Examples: New developments may have addresses but will be &quot;inactive&quot; until somebody moves in. Or, after Hurricane Katrina, addresses in the affected area were marked as inactive for a time. Residents may also mark their own mailboxes as inactive for privacy and other reasons.

Y — Address is active.
N — Address is inactive.
[blank] — Activity status is not known by the USPS.</description>
        <inlineHelpText>Active based on USPS information.</inlineHelpText>
        <label>Active USPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if address can be actively used or not</description>
        <inlineHelpText>Is address active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressExternalIdFormula__c</fullName>
        <formula>AddressRelated_External__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressExternalIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>CASE( SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;, ExternalId__c ,
&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>AddressIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <description>Line 1 of address.  When addresses are USPS certified the entire street address is on one line per Postal Service regulations</description>
        <inlineHelpText>Line 1 of street address. May be entire street address if has been USPS certified. This is a required field.</inlineHelpText>
        <label>AddressLine1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <description>Line 2 of address. When addresses are USPS certified the entire street address is on AddressLine1 per Postal Service regulations</description>
        <inlineHelpText>Line 2 of street address if applicable.</inlineHelpText>
        <label>AddressLine2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressRelated_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates if external address has been associated with this address.</description>
        <inlineHelpText>External address relationship</inlineHelpText>
        <label>AddressRelated_External</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>SourceOrg cannot be Customer or Null. Please review selections</errorMessage>
            <filterItems>
                <field>$Source.SourceOrg__c</field>
                <operation>equals</operation>
                <value>HealthDetail</value>
            </filterItems>
            <infoMessage>Displaying HealthDetail sourceorgs only</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses (AddressRelated_External)</relationshipLabel>
        <relationshipName>AddressesRelated_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_ID_Base__c</fullName>
        <description>Used to establish base ID for address</description>
        <formula>If(LEN( Address_ID__c )=14 , LEFT(Address_ID__c, 12),&quot;&quot;)</formula>
        <label>Address ID Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_ID_Index__c</fullName>
        <description>Index for address ID</description>
        <formula>If(LEN( Address_ID__c )=14 , Right(Address_ID__c, 2),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address ID Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_ID__c</fullName>
        <description>Unique Address ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Address ID</inlineHelpText>
        <label>Address ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_rel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related address. Usually used to indicate this is a valid address and should be used over other</description>
        <inlineHelpText>Related address</inlineHelpText>
        <label>Related Address</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Can only lookup to Customer sourced records</errorMessage>
            <filterItems>
                <field>$Source.SourceOrg__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Address__c.Id</valueField>
            </filterItems>
            <infoMessage>Showing all non duplicate records from customer source</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>Contains the 12-digit PostNet barcode for the submitted address.</description>
        <inlineHelpText>Contains the 12-digit PostNet barcode for the submitted address.</inlineHelpText>
        <label>Barcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the address is the &quot;default&quot; address for a building; for example, the main lobby.</description>
        <inlineHelpText>Indicates whether the address is the &quot;default&quot; address for a building; for example, the main lobby.</inlineHelpText>
        <label>Building Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMRA__c</fullName>
        <description>Indicates whether or not the address is associated with a Commercial Mailing Receiving Agency (CMRA), also known as a private mail box operator. A CMRA is a business through which USPS mail may be sent or received. A private mail box (PMB) is usually associated with a CMRA.</description>
        <inlineHelpText>Whether address is part of a commerical mailing agency such as a private mail box.</inlineHelpText>
        <label>CMRA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarrierRoute__c</fullName>
        <description>Contains the postal carrier route for the submitted address.</description>
        <inlineHelpText>Contains the postal carrier route for the submitted address.</inlineHelpText>
        <label>CarrierRoute</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckDigit__c</fullName>
        <description>Contains the check digit (i.e. correction character) for the 11-digit delivery point barcode
(DPBC)</description>
        <inlineHelpText>Contains the check digit (i.e. correction character) for the 11-digit delivery point barcode
(DPBC)</inlineHelpText>
        <label>CheckDigit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City Name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>General Comments</description>
        <inlineHelpText>General Comments</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <description>The 5-digit county FIPS (Federal Information Processing Standards) code; it is a combination of a 2-digit state FIPS code and a 3-digit county code assigned by the NIST (National Institute of Standards and Technology).</description>
        <inlineHelpText>Count FIPS code</inlineHelpText>
        <label>County FIPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County name for address. Counties populate based on state value selected.</description>
        <inlineHelpText>County name</inlineHelpText>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Allegany</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Broome</fullName>
                </value>
                <value>
                    <fullName>Cattaraugus</fullName>
                </value>
                <value>
                    <fullName>Cayuga</fullName>
                </value>
                <value>
                    <fullName>Chautauqua</fullName>
                </value>
                <value>
                    <fullName>Chemung</fullName>
                </value>
                <value>
                    <fullName>Chenango</fullName>
                </value>
                <value>
                    <fullName>Clinton</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Cortland</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dutchess</fullName>
                </value>
                <value>
                    <fullName>Erie</fullName>
                </value>
                <value>
                    <fullName>Essex</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Fulton</fullName>
                </value>
                <value>
                    <fullName>Genesee</fullName>
                </value>
                <value>
                    <fullName>Greene</fullName>
                </value>
                <value>
                    <fullName>Hamilton</fullName>
                </value>
                <value>
                    <fullName>Herkimer</fullName>
                </value>
                <value>
                    <fullName>Jefferson</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lewis</fullName>
                </value>
                <value>
                    <fullName>Livingston</fullName>
                </value>
                <value>
                    <fullName>Madison</fullName>
                </value>
                <value>
                    <fullName>Monroe</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Nassau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerExternalid_frm__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressLine1__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressLine2__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(City__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(State__c),&quot; &quot;,NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(ZipCode__c,5),&quot; &quot;,NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL) 

/*Customer sends address all in 1 line. Using formula to match addresses existing in system already 
Matches formula used in Informatica address transformation. If formulas do not match will get duplicates*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerExternalid_frm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPVCode_Description__c</fullName>
        <description>Description for DPV Code field</description>
        <formula>CASE( 1,IF( ISPICKVAL(  DPVCode__c ,&apos;Y&apos;) , 1,0), &apos;The entire address was DPV confirmed as a deliverable address&apos;,
IF( ISPICKVAL(DPVCode__c ,&apos;N&apos;) , 1,0), &apos;The address could not be DPV confirmed as a deliverable address&apos;,
IF( ISPICKVAL(DPVCode__c ,&apos;S&apos;) , 1,0), &apos;The address was DPV confirmed by dropping the secondary information (apartment suite etc)&apos;,
IF( ISPICKVAL(DPVCode__c  ,&apos;D&apos;) , 1,0), &apos;The address was DPV confirmed but it is missing secondary information (apartment suite etc)&apos;,
&apos;The address was not submitted for DPV confirmation This is usually because the address does not have a ZIP code and 4 add-on code or the address has already been determined to be Not Deliverable&apos;)</formula>
        <inlineHelpText>Description for DPV Code field</inlineHelpText>
        <label>DPVCode Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPVCode__c</fullName>
        <description>Indicates the status of the Delivery Point Validation (if requested by User). This lets you know whether or not the USPS delivers mail to the associated address.</description>
        <inlineHelpText>This lets you know whether or not the USPS delivers mail to the associated address.</inlineHelpText>
        <label>DPVCode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPVFalsePositive__c</fullName>
        <description>Indicates whether or not a false positive match was found by DPV. A false positive match means that the address is a fabricated address derived by improperly querying USPS data.</description>
        <inlineHelpText>False positive match</inlineHelpText>
        <label>DPVFalsePositive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPVFootnotes__c</fullName>
        <description>Indicates why the address was given its DPV value. This field may also indicate the type of ZIP code that the address is associated with in the database (General Delivery, Military, PO Box, or Unique).</description>
        <label>DPVFootnotes</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultFlag__c</fullName>
        <description>Indicates whether the address processed obtained an exact match to a record in the ZIP + 4 file--either to a highrise or a rural route default record. A positive value will also be present when a match is made to a base street record where high-rise exact records exist and no high-rise default record is present on the ZIP + 4 file.</description>
        <inlineHelpText>Indicates if address is a default match to a high-rise or rural route record.</inlineHelpText>
        <label>DefaultFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryPoint__c</fullName>
        <description>Includes the last two digits of the house/box number, or if an “H” record is matched, the secondary unit number representing the delivery point information to form the 11-digit delivery point bar code (DPBC).</description>
        <inlineHelpText>Includes the last two digits of the house/box number, or if an “H” record is matched.</inlineHelpText>
        <label>DeliveryPoint</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Early warning system flag; a positive result indicates the street of the address is not yet ready for mail delivery and that the address will soon be added to the master ZIP+4 file in the coming weeks or months. This commonly occurs for new streets or streets undergoing a name change.

true — The address was flagged by EWS, preventing a ZIP+4 match.
[blank] — Address was not flagged by EWS.</description>
        <inlineHelpText>Early Warning System for new addresses.</inlineHelpText>
        <label>Ews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FlagReason__c</fullName>
        <description>Provides reason for flag from address validation program</description>
        <label>FlagReason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Footnotes__c</fullName>
        <description>Footnote for address from address validation program</description>
        <label>Footnotes</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Adddress__c</fullName>
        <description>Formula to display full address for UI purposes</description>
        <formula>CASE( RecordType.DeveloperName, &quot;Standard_Address&quot;,
(If(Not(ISBLANK(  Site_Name__c )),  Site_Name__c&amp;&quot; &quot;,&quot;&quot;)&amp; AddressLine1__c &amp;&quot; &quot;&amp; If(Not(ISBLANK( AddressLine2__c )) , AddressLine2__c&amp;&quot; &quot;,&quot;&quot;)&amp; City__c &amp;&quot; &quot;&amp; Text(State__c)&amp;&quot; &quot;&amp; ZipCode__c ),
&quot;Address_Confirmed&quot;,
(If(Not(ISBLANK(  Site_Name__c )),  Site_Name__c&amp;&quot; &quot;,&quot;&quot;)&amp; AddressLine1__c &amp;&quot; &quot;&amp; If(Not(ISBLANK( AddressLine2__c )) , AddressLine2__c&amp;&quot; &quot;,&quot;&quot;)&amp; City__c &amp;&quot; &quot;&amp; Text(State__c)&amp;&quot; &quot;&amp; ZipCode__c ),
&quot;Address_Region&quot;,
&quot;Address Region - &quot;&amp;Text(County__c) &amp; &quot; &quot;&amp; Text(State__c)  , Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Adddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>QA Index value from address verification software</description>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>Indicates if Address is active or not</description>
        <inlineHelpText>Is Address active?</inlineHelpText>
        <label>IsActive</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMailingOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if address can only be used for mailing, such as PO Box, Postal services, etc.</description>
        <inlineHelpText>Is the address only of type mailing such as a PO box?</inlineHelpText>
        <label>IsMailingOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LACSInk__c</fullName>
        <description>Indicates whether the address has an entry in the Locatable Address Conversion Service</description>
        <inlineHelpText>Indicates whether the address has an entry in the Locatable Address Conversion Service</inlineHelpText>
        <label>LACSInk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LACSLinkCode_Description__c</fullName>
        <description>Forumla description for value in QA LACSLinkCode field</description>
        <formula>CASE( 1,IF( ISPICKVAL( LACSLinkCode__c ,&apos;A&apos;) , 1,0), &apos;LACSLink record match and a converted address is provided in the address data fields&apos;,
IF( ISPICKVAL(LACSLinkCode__c ,&apos;00&apos;) , 1,0), &apos;No match, and no converted address&apos;,
IF( ISPICKVAL(LACSLinkCode__c ,&apos;09&apos;) , 1,0), &apos;LACSLink matched an input address to an old address which is a highrise default address, no new address is provided&apos;,
IF( ISPICKVAL(LACSLinkCode__c ,&apos;14&apos;) , 1,0), &apos;Found LACSLink record, but couldn’t convert the data to deliverable address&apos;,
IF( ISPICKVAL(LACSLinkCode__c ,&apos;92&apos;) , 1,0), &apos;LACSLink record matched after dropping the secondary number from input&apos;,
&apos;No LACSLink lookup attempted&apos;)</formula>
        <inlineHelpText>Forumla description for value in QA LACSLinkCode field</inlineHelpText>
        <label>LACSLinkCode Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LACSLinkCode__c</fullName>
        <description>Displays the reason for the Original LACSLink indication given.</description>
        <inlineHelpText>Displays the reason for the Original LACSLink indication given.</inlineHelpText>
        <label>LACSLinkCode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LACSLinkInd_Description__c</fullName>
        <formula>CASE( 1,IF( ISPICKVAL(LACSLinkInd__c,&apos;Y&apos;) , 1,0), &apos;A new address could be furnished. The input record matched to a record in the master file&apos;,
IF( ISPICKVAL(LACSLinkInd__c,&apos;S&apos;) , 1,0), &apos;The record is a ZIP 4 street level or highrise match. The input record matched to a master file record but the input address had a secondary number and the master file record did not&apos;,
IF( ISPICKVAL(LACSLinkInd__c,&apos;N&apos;) , 1,0), &apos;A new address could not be furnished. The input record COULD NOT be matched to a record in the master file&apos;,
IF( ISPICKVAL(LACSLinkInd__c,&apos;F&apos;) , 1,0), &apos;A false positive record was detected&apos;,
Null)</formula>
        <label>LACSLinkInd Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LACSLinkInd__c</fullName>
        <description>Indicates whether or not there is an address match with the LACSLink database.</description>
        <inlineHelpText>Indicates whether or not there is an address match with the LACSLink database.</inlineHelpText>
        <label>LACSLinkInd</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastCertificationDate__c</fullName>
        <description>Date updated from address certification.</description>
        <label>LastCertificationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastVerified__c</fullName>
        <description>Date and Time of Last Verification</description>
        <inlineHelpText>Date and Time of Last Verification</inlineHelpText>
        <label>LastVerified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatLong__c</fullName>
        <description>Latitude and Longitude</description>
        <inlineHelpText>Latitude and Longitude</inlineHelpText>
        <label>LatLong</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location name, if applicable</description>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessFlag__c</fullName>
        <description>Indicates if record passed or failed validation</description>
        <label>ProcessFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Description__c</fullName>
        <description>Description for RecordType field</description>
        <formula>CASE( 1,IF( ISPICKVAL( RecordType__c ,&apos;F&apos;) , 1,0), &apos;The address is a Firm record the finest level of match available for an address&apos;,
IF( ISPICKVAL(RecordType__c ,&apos;G&apos;) , 1,0), &apos;The address is a General Delivery record&apos;,
IF( ISPICKVAL(RecordType__c ,&apos;H&apos;) , 1,0), &apos;The address is a High-rise record representing either a Building or an Apartment record&apos;,
IF( ISPICKVAL(RecordType__c ,&apos;P&apos;) , 1,0), &apos;The address is a Post Office Box record&apos;,
IF( ISPICKVAL(RecordType__c ,&apos;R&apos;) , 1,0), &apos;The address is either a Rural Route or Highway Contract record both of which may have associated box number ranges&apos;,
IF( ISPICKVAL(RecordType__c ,&apos;S&apos;) , 1,0), &apos;The address is a Street record containing a valid primary number range&apos;,
&apos;A record type has not been returned because the address did not make a valid DPV match&apos;)</formula>
        <inlineHelpText>Description for RecordType field</inlineHelpText>
        <label>Record Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAddressIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org</description>
        <formula>IF(NOT(ISBLANK(Address_rel__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address_rel__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_rel__c),
&quot;HealthDetail&quot;, Address_rel__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_rel__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_rel__r.ExternalId__c,
&quot;Customer&quot;, Address_rel__r.Remote_AddressId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Address Id Formula</inlineHelpText>
        <label>RelatedAddressIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressId__c</fullName>
        <description>Remote Address Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Address Id</inlineHelpText>
        <label>Remote AddressId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_ExternalAddressId__c</fullName>
        <description>Used for Salesforce to Salesforce</description>
        <externalId>true</externalId>
        <label>Remote ExternalAddressId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Stores value for Remote Record Type. Updated from Workflow</description>
        <inlineHelpText>Value for Remote Record Type</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_RelatedAddressId__c</fullName>
        <description>Related Address Id on Remote site. Used for Salesforce to Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>Related Address Id on Remote site</inlineHelpText>
        <label>Remote RelatedAddressId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>